--- a/Week1/Day1/DailyChallenge/index.html
+++ b/Week1/Day1/DailyChallenge/index.html
@@ -32,7 +32,15 @@
             <div class="wrapper">
                 <section id="about">
                     <h2>About</h2>
-                    <p>Thanos is a mutant member of the race of superhumans known as the Titanian Eternals. The character possesses abilities common to the Eternals, but amplified to a higher degree through a combination of his mutant–Eternal heritage, bionic amplification, mysticism, and power bestowed by the abstract entity, Death. Demonstrating enormous superhuman strength, speed, stamina, immortality and invulnerability among other qualities, Thanos can absorb and project vast quantities of cosmic energy, and is capable of telekinesis and telepathy. He can manipulate matter and live indefinitely without food, air or water, cannot die of old age, is immune to all terrestrial diseases, and has high resistance to psychic assaults. Thanos is also an accomplished hand-to-hand combatant, having been trained in the art of war on Titan.</p>
+                    <p>Thanos is a mutant member of the race of superhumans known as the Titanian Eternals. The
+                        character possesses abilities common to the Eternals, but amplified to a higher degree through a
+                        combination of his mutant–Eternal heritage, bionic amplification, mysticism, and power bestowed
+                        by the abstract entity, Death. Demonstrating enormous superhuman strength, speed, stamina,
+                        immortality and invulnerability among other qualities, Thanos can absorb and project vast
+                        quantities of cosmic energy, and is capable of telekinesis and telepathy. He can manipulate
+                        matter and live indefinitely without food, air or water, cannot die of old age, is immune to all
+                        terrestrial diseases, and has high resistance to psychic assaults. Thanos is also an
+                        accomplished hand-to-hand combatant, having been trained in the art of war on Titan.</p>
                 </section>
                 <section id="brother">
                     <h2>Brother</h2>
@@ -63,8 +71,10 @@
             <div class="wrapper">
                 <div>
                     <img src="thanos_logo.png" alt="" class="footer__logo logo">
-                    
-                    <p class="footer__text">Thanos is immensely strong and resistant to injury, invulnerable to nearly all types of poison, disease, and telepathic attack. He also has incredible psychic abilities; he can sense things several star systems away.</p>
+
+                    <p class="footer__text">Thanos is immensely strong and resistant to injury, invulnerable to nearly
+                        all types of poison, disease, and telepathic attack. He also has incredible psychic abilities;
+                        he can sense things several star systems away.</p>
                 </div>
                 <ul class="footer__menu">
                     <li><a href="#" class="menu__link">License</a></li>
