--- a/Week1/Day1/Excercise2/index.html
+++ b/Week1/Day1/Excercise2/index.html
@@ -29,7 +29,7 @@
         </section>
         <section class="gallery">
             <div class="card">
-                <i class="fa-solid fa-display fa-2xl" style="--fa-primary-color: gold;"></i>
+                <i class="fa-solid fa-display fa-2xl"></i>
                 <h3 class="card__title">Fully Responsive</h3>
                 <p class="card__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
             </div>
