--- a/Week1/Day2/ShoppingSite/login.html
+++ b/Week1/Day2/ShoppingSite/login.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Shopping Website</title>
+    <link rel="stylesheet" href="login-signup.css">
+    <title>Document</title>
 </head>
-
 <body>
     <header>
         <i class="fa-solid fa-poo logo fa-2xl"></i>
@@ -18,13 +17,16 @@
             <a href="products.html" class="menu__link">Our Products</a>
             <a href="signup.html" class="menu__link">Sign up</a>
             <a href="login.html" class="menu__link">Log in</a>
-            
         </div>
     </header>
-    
-    <footer>
-        2023 by Katya
-    </footer>
-</body>
+    <main>
+        <form action="">
+            <h2>Please, login</h2>
+            <input type="email" name="email" id="email" placeholder="email">
+            <input type="password" name="password" id="password" placeholder="password">
+            <button type="submit">Login</button>
+        </form>
 
+    </main>
+</body>
 </html>
