--- a/Week1/Day4/DailyChallenge/index.html
+++ b/Week1/Day4/DailyChallenge/index.html
@@ -12,9 +12,7 @@
 
 <body>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-        </script>
+
     <div class="container mt-5">
         <div class="row">
             <div class="col-sm-4 mb-5">
@@ -45,8 +43,9 @@
                 </nav>
             </div>
             <div class="col-sm-8">
-                <h1>Lorem ipsum dolor sit.</h1>
-                <figure>
+                <h1>Wild and wacky vegetables</h1>
+
+                <figure class="border-start border-4 ps-4">
                     <blockquote class="blockquote">
                         <p>A well-known quote, contained in a blockquote element.</p>
                     </blockquote>
@@ -54,7 +53,8 @@
                         Someone famous in <cite title="Source Title">Source Title</cite>
                     </figcaption>
                 </figure>
-                <table class="table">
+
+                <table class="table table-striped table-bordered">
                     <thead>
                         <tr>
                             <th scope="col">#</th>
@@ -84,20 +84,28 @@
                     </tbody>
                 </table>
                 <div class="alert alert-danger" role="alert">
-                    A simple primary alert—check it out!
+                    <span class="fw-bold">Uh oh!</span> A simple primary alert—check it out!
                 </div>
-                <div class="d-flex gap-2">
-                    <img src="pic1.jpeg" width="100px" alt="" class="border border-danger img-thumbnail">
-                    <img src="pic2.jpeg" width="100px" alt="" class="border border-primary img-thumbnail">
-                    <img src="pic3.jpeg" width="100px" alt="" class="border border-warning img-thumbnail">
-                </div>
+                <!-- <div class="d-flex gap-2"> -->
+                    <!-- <div class="row"> -->
+                        <div class="gx-5">
+                            <img src="pic1.jpeg" width="100px" alt="" class="border border-danger img-thumbnail">
+                            <img src="pic2.jpeg" width="100px" alt="" class="border border-primary img-thumbnail">
+                            <img src="pic3.jpeg" width="100px" alt="" class="border border-warning img-thumbnail">
+                        </div>
+                    <!-- </div> -->
+                <!-- </div> -->
                 <h2 class="mt-5">One more header</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, obcaecati accusamus, et, quos officiis officia dolorum omnis fugiat id laboriosam quis illum animi accusantium veniam necessitatibus eveniet culpa soluta temporibus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, obcaecati accusamus, et, quos
+                    officiis officia dolorum omnis fugiat id laboriosam quis illum animi accusantium veniam
+                    necessitatibus eveniet culpa soluta temporibus.</p>
             </div>
         </div>
     </div>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
