--- a/Week1/PortfolioProject/index.html
+++ b/Week1/PortfolioProject/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <section class="vh-100 bg-light">
+    <section class="vh-100 bg-overlay">
         <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-primary">
             <div class="container-fluid d-flex w-100">
                 <a class="navbar-brand" href="#">Frame</a>
