--- a/Week3/Day1/DC/index.html
+++ b/Week3/Day1/DC/index.html
@@ -18,8 +18,6 @@
             padding: 10px;
             position: relative;
             border: 2px solid white;
-            display: flex;
-            flex-wrap: wrap;
         }
 
         .mercury {
@@ -55,7 +53,7 @@
         }
 
         .moon {
-            position: relative;
+            position: absolute;
             width: 30px;
             height: 30px;
             border-radius: 50%;
