Week3 Day2 Ninja

--- a/Week3_DOM/Day2/Ninja/Ex3_Geolocation/index.html
+++ b/Week3_DOM/Day2/Ninja/Ex3_Geolocation/index.html
@@ -7,8 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <button type="submit">Show!</button>
-    <p id="output"></p>
+    <button id="button">Show!</button>
+    <div id="output">
+        <p id="longitude"></p>
+        <p id="latitude"></p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
