--- a/Week4_AdvancedJS/Day5/Robots/index.html
+++ b/Week4_AdvancedJS/Day5/Robots/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <div class="container" id="root"></div>
-    <script src="script.js"></script>
+    <script src="script_classes.js"></script>
 </body>
 </html>
