Tic Tac with classes

--- a/Week4_AdvancedJS/Day5/TicTac/index.html
+++ b/Week4_AdvancedJS/Day5/TicTac/index.html
@@ -47,7 +47,7 @@
         <p id="winmsg">Placeholder</p>
         <button id="restart">Restart</button>
     </div>
-    <script src="script.js"></script>
+    <script src="script_classes.js"></script>
 </body>
 
 </html>
