--- a/Week5_Requests/Day1/Gold/index.html
+++ b/Week5_Requests/Day1/Gold/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <form action="./another.html">
-        <input type="text" name="name" id="name">
-        <input type="text" name="lastname" id="lastname">
+        <input type="text" name="name" id="name" placeholder="First Name">
+        <input type="text" name="lastname" id="lastname" placeholder="Last Name">
         <input type="submit" value="Send">
     </form>
     
