Moved elements generation to js

--- a/PortfolioProject/index.html
+++ b/PortfolioProject/index.html
@@ -21,27 +21,17 @@
       </ul>
     </nav>
     <div class="about">
-      <ul class="list">
-        <li><a onclick="changeLanguage('eng')" id="english" href="#about">English</a></li>
-        <li><a onclick="changeLanguage('heb')" id="hebrew" href="#about">Hebrew</a></li>
-        <li><a onclick="changeLanguage('rus')" id="russian" href="#about">Russian</a></li>
+      <ul class="list" id="lang-list">
       </ul>
-      <div class="flex-column-20">
-        <h1 class="name"><span id="firstname" class="text-accent">Ekaterina</span><br>
-          <span id="surname">Orlova</span>
+      <div class="flex-column-20" id="main-text">
+        <!-- <h1 class="name"><span id="firstname" class="text-accent"></span><br>
+          <span id="surname"></span>
         </h1>
         <p class="about__text"><span id="desc1">Mother, developer,</span><br>
           <span id="desc2">huge </span><span class="text-accent" id="frozen">Frozen</span><span id="desc3"> fan</span>
-        </p>
+        </p> -->
       </div>
-      <ul class="list">
-        <li>CSS/HTML</li>
-        <li>JavaScript</li>
-        <li>Node.js</li>
-        <li>React</li>
-        <li>Else</li>
-        <li>Else</li>
-        <li>Else</li>
+      <ul class="list" id="skills-list">
       </ul>
 
     </div>
