--- a/PortfolioProject/index.html
+++ b/PortfolioProject/index.html
@@ -21,19 +21,9 @@
       </ul>
     </nav>
     <div class="about">
-      <ul class="list" id="lang-list">
-      </ul>
-      <div class="flex-column-20" id="main-text">
-        <!-- <h1 class="name"><span id="firstname" class="text-accent"></span><br>
-          <span id="surname"></span>
-        </h1>
-        <p class="about__text"><span id="desc1">Mother, developer,</span><br>
-          <span id="desc2">huge </span><span class="text-accent" id="frozen">Frozen</span><span id="desc3"> fan</span>
-        </p> -->
-      </div>
-      <ul class="list" id="skills-list">
-      </ul>
-
+      <ul class="list" id="lang-list"></ul>
+      <div class="flex-column-20" id="main-text"></div>
+      <ul class="list" id="skills-list"></ul>
     </div>
     <p class="scroll-prompt">Scroll to see the projects</p>
     <div class="bg"></div>
