--- a/Week5_Requests/Day5_MiniPrj/DC_Converter/index.html
+++ b/Week5_Requests/Day5_MiniPrj/DC_Converter/index.html
@@ -109,6 +109,7 @@
             <label for="amount">Amount:</label>
             <input type="number" name="amount" id="amount">
             <button type="submit">Convert</button>
+            <button id="switchBtn" type="button">Switch</button>
         </form>
         <div id="output"></div>
     </div>
