--- a/Week5_Requests/Day5_MiniPrj/Pockemon/index.html
+++ b/Week5_Requests/Day5_MiniPrj/Pockemon/index.html
@@ -10,6 +10,8 @@
 <body>
     <div class="container">
         <div id="pockedex">
+            <div id="loader">loading</div>
+            <div id="error">OOOOPS!</div>
             <div id="logo"></div>
             <div id="root"></div>
             <div id="display"></div>
