--- a/Week6_DB/Day5/todo/view.html
+++ b/Week6_DB/Day5/todo/view.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>View</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="output" class="tasks-container"></div>
+    <script src="view.js"></script>
 </body>
 </html>
