--- a/Week7_Node/Day4/DC/public/login.html
+++ b/Week7_Node/Day4/DC/public/login.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 <body>
-    <h1>My shopping list</h1>
-    <form onsubmit="addItem(event)">
-        <input type="text" name="item">
-        <input type="number" name="amount" id="">
-        <button>Add</button>
+    <form onsubmit="checkPassword(event)">
+        <input type="email" name="email" id="email">
+        <input type="password" name="password" id="password">
+        <button>Login</button>
     </form>
     <div id="output"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
