--- a/Week7_Node/Day4/DC/public/login.html
+++ b/Week7_Node/Day4/DC/public/login.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <form onsubmit="checkPassword(event)">
-        <input type="email" name="email" id="email">
-        <input type="password" name="password" id="password">
+        <input type="email" name="email" id="email" required placeholder="email">
+        <input type="password" name="password" id="password" required placeholder="password">
         <button>Login</button>
     </form>
     <div id="output"></div>
