--- a/Week7_Node/Day4/Inclass/ex1_server_with_structure/public/index.html
+++ b/Week7_Node/Day4/Inclass/ex1_server_with_structure/public/index.html
@@ -72,7 +72,7 @@
 
     <script>
         const fetchApi = async () => {
-            const url = 'http://localhost:5000/api/products'
+            const url = '/api/products'
             try {
                 let res = await fetch(url)
                 if (res.ok) {
@@ -106,15 +106,16 @@
             const input = document.getElementById('prod_id')
             const prod_id = input.value
 
-            fetch(`http://localhost:5000/api/products/${prod_id}`)
+            fetch(`/api/products/${prod_id}`)
                 .then(res => {
                     if (res.ok) {
                         return res.json()
                     } else {throw new Error()}
                 })
                 .then(data => {
+                    console.log(data)
                     clearScreen()
-                    createElement(data)
+                    createElement(data[0])
                     input.value = ''
                 })
                 .catch(err => console.log(err))
@@ -124,9 +125,10 @@
             const input = document.getElementById('prod_name')
             const prod_name = input.value
 
-            fetch(`http://localhost:5000/api/search?name=${prod_name}`)
+            fetch(`/api/products/search?name=${prod_name}`)
                 .then(res => res.json())
                 .then(data => {
+                    console.log(data)
                     clearScreen()
                     data.map(element => createElement(element))
                     input.value = ''
